crates/cribo/tests/snapshots/bundled_code@xfail_bundle_third_party_getsource_keyword.snap
---
source: crates/cribo/tests/test_bundling_snapshots.rs
input_file: crates/cribo/tests/fixtures/xfail_bundle_third_party_getsource_keyword/main.py
---
#!/usr/bin/env python3
# Generated by Cribo - Python Source Bundler
# https://github.com/ophidiarium/cribo

"""Source inspection through the object= keyword keeps the provider external.\n\nCPython accepts inspect.getsource(object=provider); the bundled namespace has\nno on-disk source to serve, so the observed provider stays installed.\n"""
import sys as _sys
import importlib as _importlib
class _CriboModule():

    def __init__(self, m, p):
        self._m, self._p = m, p

    def __getattr__(self, n):
        f = self._p + '.' + n
        try:
            return _CriboModule(_importlib.import_module(f), f)
        except ImportError:
            return getattr(self._m, n)

    def __getattribute__(self, n):
        return object.__getattribute__(self, n) if n in ('_m', '_p', '__getattr__', '__class__', '__dict__', '__dir__', '__module__', '__qualname__') else getattr(object.__getattribute__(self, '_m'), n)
class _Cribo():

    def __getattr__(self, n):
        m = _sys.modules.get(n) or _importlib.import_module(n)
        return _CriboModule(m, n)
_cribo = _Cribo()
inspect = _cribo.inspect
import keyword_sourced_pkg
print("has source:", bool(_cribo.inspect.getsource(object=keyword_sourced_pkg)))
